--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt nobis ipsam ratione expedita ducimus sed temporibus ad accusamus eos, adipisci molestiae molestias officia quas officiis provident sequi vitae libero est.</p>
+<h1> Today is my birthday </h1>
+
+
 </body>
 </html>
